--- a/app/src/main/res/layout/activity_originality.xml
+++ b/app/src/main/res/layout/activity_originality.xml
@@ -56,7 +56,7 @@
         android:id="@+id/rg"
         android:layout_width="match_parent"
         android:layout_height="32dp"
-        android:gravity="center_vertical"
+        android:gravity="center"
         android:orientation="horizontal">
         <RadioButton
             android:id="@+id/rb_all"
