liukaiqiang:工厂和产品

--- a/app/src/main/res/layout/activity_factory.xml
+++ b/app/src/main/res/layout/activity_factory.xml
@@ -57,7 +57,7 @@
         </RadioGroup>
     </LinearLayout>
     <View
-        style="@style/LineGrey1dp"/>
+        style="@style/LineGrey1px"/>
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
