--- a/app/src/main/res/layout/item_originality.xml
+++ b/app/src/main/res/layout/item_originality.xml
@@ -10,9 +10,12 @@
                   android:orientation="horizontal">
         <com.ddgj.dd.view.CircleImageView
             android:id="@+id/user_icon"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:src="@mipmap/ic_account_box_grey600_24dp"/>
+            android:src="@mipmap/ic_account_box_grey600_24dp"
+            app:border_color="@color/white"
+            app:border_width="2dp"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -24,7 +27,6 @@
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
                 android:singleLine="true"
-                android:text="阿萨德法师打发斯蒂芬"
                 android:textColor="@color/black"
                 android:textSize="16sp"/>
             <LinearLayout
@@ -36,13 +38,13 @@
                     android:id="@+id/user_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="lgst"
                     android:textColor="@color/grey"
                     android:textSize="14sp"/>
                 <ImageView android:layout_width="14dp"
                            android:layout_height="14dp"
                            android:layout_marginLeft="4dp"
-                           android:src="@mipmap/ic_launcher"/>
+                           android:src="@mipmap/ic_launcher"
+                           android:visibility="gone"/>
 
                 <TextView
                     android:id="@+id/type"
@@ -55,7 +57,6 @@
                     android:paddingLeft="4dp"
                     android:paddingRight="4dp"
                     android:paddingTop="1dp"
-                    android:text="电子产品"
                     android:textColor="@color/colorPrimary"
                     android:textSize="10sp"/>
             </LinearLayout>
@@ -67,18 +68,16 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <TextView android:id="@+id/content_text" android:layout_width="0dp"
-                  android:layout_weight="7"
                   android:layout_height="wrap_content"
+                  android:layout_weight="7"
                   android:maxLines="4"
-                  android:text="jafslkdasdfasdfdsafsdfdsfdsafsdfsdfdsafafdsfsdfsdfdsfasdfjlfdsaaaaaaaaaaaaaaaaaaaaaaaafdsfaffdsfdsfsfsdfsdadfsjafjfjsdjfljfljdslkfjlkjdslkfjlksdajflksdajlfk;jdslakfjlksdajfdlkjlsd;kafjlkdsf"
                   android:textColor="@color/grey"/>
         <ImageView
             android:id="@+id/img1"
             android:layout_width="0dp"
             android:layout_height="80dp"
             android:layout_weight="3"
-            android:scaleType="centerCrop"
-            android:src="@mipmap/ic_launcher"/>
+            android:scaleType="centerCrop"/>
     </LinearLayout>
     <View
         style="@style/LineGrey1px"
@@ -97,7 +96,6 @@
             android:ellipsize="end"
             android:gravity="center_vertical"
             android:maxLines="1"
-            android:text="999"
             android:textColor="@color/grey"/>
         <TextView
             android:id="@+id/browse"
@@ -109,7 +107,6 @@
             android:ellipsize="end"
             android:gravity="center_vertical"
             android:maxLines="1"
-            android:text="999"
             android:textColor="@color/grey"/>
         <TextView
             android:id="@+id/date"
@@ -121,7 +118,6 @@
             android:ellipsize="end"
             android:gravity="center_vertical"
             android:maxLines="1"
-            android:text="999"
             android:textColor="@color/grey"/>
     </LinearLayout>
 
