--- a/app/src/main/res/layout/activity_publish_patent.xml
+++ b/app/src/main/res/layout/activity_publish_patent.xml
@@ -23,6 +23,10 @@
             android:textStyle="bold" />
 
     </RelativeLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/grey_light"></LinearLayout>
 
     <ScrollView
         android:layout_width="match_parent"
@@ -369,7 +373,7 @@
                     android:id="@+id/category_spinner"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:entries="@array/originalityTypes" />
+                    />
 
             </LinearLayout>
 
