--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -12,4 +12,12 @@
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:statusBarColor">?android:attr/colorPrimary</item>
     </style>
+
+    <style name="ActionBarLightTheme">
+        <item name="android:elevation">2dp</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">@color/grey_lightE</item>
+        <item name="android:gravity">center_vertical</item>
+    </style>
 </resources>
