--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,7 @@
     <View android:layout_width="match_parent" android:layout_height="4dp"
     android:background="@color/colorPrimary"/>
     <RadioGroup
+        android:elevation="50dp"
         android:id="@+id/act_main_radio_group"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
