--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -19,6 +19,7 @@
     </RelativeLayout>
 
     <View style="@style/LineGrey1px"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="40dp"
@@ -30,10 +31,10 @@
             android:layout_gravity="center_horizontal"/>
     </LinearLayout>
     <View style="@style/LineGrey1px"/>
-    <android.support.v4.view.ViewPager
+    <com.ddgj.dd.view.CustomViewPager
         android:id="@+id/list_vp"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    </android.support.v4.view.ViewPager>
+    </com.ddgj.dd.view.CustomViewPager>
 </LinearLayout>
