--- a/app/src/main/res/layout/activity_oemproduct.xml
+++ b/app/src/main/res/layout/activity_oemproduct.xml
@@ -61,6 +61,7 @@
             android:layout_alignParentRight="true"
             android:layout_margin="16dp"
             android:src="@mipmap/ic_add_white_24dp"
+            android:visibility="gone"
             app:backgroundTint="@color/colorPrimary"/>
     </RelativeLayout>
 </LinearLayout>
