--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -46,7 +46,7 @@
             />
             <LinearLayout android:layout_width="match_parent"
                           android:layout_height="32dp"
-                          android:layout_marginLeft="16dp"
+                          android:paddingLeft="16dp"
                           android:background="@color/white"
                           android:gravity="center_vertical"
                           android:orientation="horizontal">
