--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".fragment.HomeFragment">
-    <RelativeLayout
+    <!--<RelativeLayout
         style="@style/ActionBarTheme">
         <TextView
             android:layout_width="wrap_content"
@@ -25,7 +25,7 @@
         <TextView
             style="@style/TitleBarTextTheme"
             android:text="@string/app_name"/>
-    </RelativeLayout>
+    </RelativeLayout>-->
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
