--- a/app/src/main/res/layout/item_home_list_originality_title.xml
+++ b/app/src/main/res/layout/item_home_list_originality_title.xml
@@ -24,7 +24,7 @@
         android:gravity="center"
         android:text="@string/originality"
         android:textColor="@color/colorPrimaryDark"
-        android:textSize="20sp"/>
+        android:textSize="20dp"/>
 
 
 </LinearLayout>
