--- a/app/src/main/res/layout/item_order_factory_item.xml
+++ b/app/src/main/res/layout/item_order_factory_item.xml
@@ -9,8 +9,11 @@
                   android:orientation="horizontal">
         <com.ddgj.dd.view.CircleImageView
             android:id="@+id/icon"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="56dp"
-            android:layout_height="56dp"/>
+            android:layout_height="56dp"
+            app:border_color="@color/white"
+            app:border_width="2dp"/>
         <LinearLayout android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:layout_marginLeft="8dp"
