--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,6 +7,12 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
+    <style name="AppThemeLightStatuBar" parent="Theme.AppCompat.Light.DarkActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/grey_light</item>
+        <item name="colorPrimaryDark">@color/grey_light</item>
+        <item name="colorAccent">@color/colorAccent</item>
+    </style>
     <style name="ActivityTheme" parent="AppTheme">
         <item name="android:screenOrientation">portrait</item>
     </style>
@@ -15,6 +21,11 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:background">@color/colorActionBar</item>
+    </style>
+    <style name="ActionBarFactoryTheme">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">@color/grey_lightE</item>
     </style>
     <style name="ActionBarLightTheme">
         <item name="android:layout_width">match_parent</item>
@@ -29,6 +40,13 @@
         <item name="android:gravity">center</item>
         <item name="android:textSize">16sp</item>
         <item name="android:textColor">@color/white</item>
+    </style>
+    <style name="TitleBarFactoryTextTheme">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">40dp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/colorPrimary</item>
     </style>
     <style name="TitleBarRightTextTheme">
         <item name="android:layout_width">50dp</item>
