--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,6 @@
     <dimen name="text_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="action_bar_height">40dp</dimen>
+
+    <dimen name="edit_padding_top">0dp</dimen>
 </resources>
