--- a/app/src/main/res/layout/activity_plate_deatils.xml
+++ b/app/src/main/res/layout/activity_plate_deatils.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
     <RelativeLayout style="@style/ActionBarLightTheme">
@@ -10,6 +10,7 @@
             android:src="@mipmap/ic_blue_back" />
 
         <TextView
+            android:id="@+id/post_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
@@ -20,10 +21,83 @@
             android:textStyle="bold" />
 
     </RelativeLayout>
-    <TextView
+    <ScrollView
+        android:id="@+id/sv_root"
+        android:layout_marginTop="40dp"
+        android:layout_marginBottom="48dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="帖子详情"
         android:gravity="center"
-        android:textSize="40sp"/>
-</LinearLayout>
+        >
+        <LinearLayout
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_width="match_parent"
+            android:orientation="vertical"
+            android:layout_height="wrap_content">
+            <LinearLayout
+
+                android:layout_width="match_parent"
+                android:orientation="vertical"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:id="@+id/post_sub_title"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="22sp"
+                    android:text="标题"/>
+                <TextView
+                    android:id="@+id/post_publish_data"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="时间"/>
+            </LinearLayout>
+            <View
+                style="@style/LineGrey1px"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:orientation="horizontal"
+                android:layout_height="wrap_content">
+                <com.ddgj.dd.view.CircleImageView
+                    android:id="@+id/head_pic"
+                    android:layout_margin="5dp"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:src="@drawable/ic_launcher"/>
+                <TextView
+                    android:id="@+id/user_amount"
+                    android:layout_marginLeft="5dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="用户名"/>
+            </LinearLayout>
+            <LinearLayout
+                android:id="@+id/post_content"
+                android:layout_margin="10dp"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+<TextView
+    android:id="@+id/post_content_tv"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content" />
+            </LinearLayout>
+            <View
+                style="@style/LineGrey1px"/>
+        </LinearLayout>
+
+    </ScrollView>
+    <LinearLayout
+       android:layout_alignParentBottom="true"
+        android:layout_width="match_parent"
+        android:layout_height="48dp">
+
+        <Button
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="评论"
+            android:layout_weight="1"/>
+    </LinearLayout>
+</RelativeLayout>
