--- a/app/src/main/res/layout/item_home_list_patent_title.xml
+++ b/app/src/main/res/layout/item_home_list_patent_title.xml
@@ -10,7 +10,7 @@
         android:id="@+id/icon"
         android:layout_width="24dp"
         android:layout_height="24dp"
-        android:src="@mipmap/ic_custom"/>
+        android:src="@mipmap/ic_patent"/>
     <View
         android:layout_width="1dp"
         android:layout_height="20dp"
