--- a/app/src/main/res/drawable/selector_login_btn_bg.xml
+++ b/app/src/main/res/drawable/selector_login_btn_bg.xml
@@ -7,6 +7,13 @@
             <stroke android:width="1dp" android:color="@color/colorPrimary"/>
         </shape>
     </item>
+    <item android:state_enabled="false">
+        <shape android:shape="rectangle">
+            <corners android:radius="40dp"/>
+            <solid android:color="@color/grey_light"/>
+            <stroke android:width="1dp" android:color="@color/grey_light"/>
+        </shape>
+    </item>
     <item>
         <shape android:shape="rectangle">
             <corners android:radius="40dp"/>
