--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -23,7 +23,7 @@
         <ImageView android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
-                   android:src="@mipmap/ic_launcher"
+                   android:src="@mipmap/ic_alpha_logo"
         />
         <TextView android:layout_width="match_parent"
                   android:layout_height="wrap_content"
@@ -33,11 +33,24 @@
                   android:textStyle="bold"/>
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="1"
             android:layout_marginTop="8dp"
             android:text="@string/about_us_content"
             android:textColor="@color/black"
             android:textSize="12sp"/>
 
+        <TextView android:layout_width="match_parent"
+                  android:layout_height="wrap_content"
+                  android:gravity="center"
+                  android:padding="16dp"
+                  android:text="版本：1.0.0"/>
+        <Button android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/ease_btn_blue_selector"
+                android:text="检查更新"
+                android:onClick="checkUpdate"
+                android:textColor="@color/white"
+        />
     </LinearLayout>
 </LinearLayout>
