--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -67,7 +67,8 @@
         <LinearLayout android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_marginTop="8dp"
-                      android:orientation="horizontal">
+                      android:orientation="horizontal"
+                      android:visibility="gone">
             <TextView android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:padding="8dp"
@@ -79,7 +80,7 @@
                 android:entries="@array/questions"/>
         </LinearLayout>
         <com.ddgj.dd.view.ClearEditText
-            android:id="@+id/answer"
+            android:id="@+id/sms_code"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
@@ -90,7 +91,8 @@
             android:paddingBottom="8dp"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
-            android:paddingTop="8dp"/>
+            android:paddingTop="8dp"
+            android:visibility="gone"/>
         <Button
             android:layout_width="match_parent"
             android:layout_height="40dp"
