--- a/app/src/main/res/layout/activity_web.xml
+++ b/app/src/main/res/layout/activity_web.xml
@@ -37,6 +37,61 @@
 
         </RelativeLayout>
     </LinearLayout>
+    <LinearLayout
+        android:id="@+id/comment_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:background="@color/grey_lightE"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:visibility="invisible">
+        <EditText android:id="@+id/comment_content"
+                  android:layout_width="0dp"
+                  android:layout_height="wrap_content"
+                  android:layout_margin="8dp"
+                  android:layout_weight="1"
+                  android:background="@drawable/shape_comment_send_btn_bg"
+                  android:gravity="top"
+                  android:hint="评论"
+                  android:maxLines="3"
+                  android:minLines="3"
+                  android:padding="4dp"/>
+        <LinearLayout android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:orientation="vertical">
+
+            <Button android:layout_width="40dp" android:layout_height="30dp"
+                    android:layout_marginRight="8dp"
+                    android:background="@drawable/ease_btn_blue_selector"
+                    android:onClick="sendCommentClick"
+                    android:text="发送"
+                    android:textColor="@color/white"
+                    android:textSize="12dp"/>
+            <Button android:layout_width="40dp"
+                    android:layout_height="30dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginRight="8dp"
+                    android:background="@drawable/ease_btn_blue_selector"
+                    android:onClick="showCommentClick"
+                    android:text="查看"
+                    android:textColor="@color/white"
+                    android:textSize="12dp"/>
+        </LinearLayout>
+
+
+    </LinearLayout>
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_above="@id/comment_container"
+        android:layout_alignParentRight="true"
+        android:layout_margin="16dp"
+        android:src="@mipmap/ic_mode_edit_white_24dp"
+        android:visibility="invisible"
+        app:backgroundTint="@color/colorPrimary"/>
     <com.ddgj.dd.view.PinchImageView
         android:id="@+id/big_img"
         android:layout_width="match_parent"
