--- a/app/src/main/res/layout/fragment_mine_patent.xml
+++ b/app/src/main/res/layout/fragment_mine_patent.xml
@@ -3,13 +3,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-    <com.handmark.pulltorefresh.library.PullToRefreshListView
-        android:id="@+id/list"
+    <com.baoyz.swipemenulistview.SwipeMenuListView
+        android:id="@+id/listView"
+        android:focusable="true"
+        android:background="@color/white"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/white">
-
-    </com.handmark.pulltorefresh.library.PullToRefreshListView>
+        android:layout_height="match_parent"/>
     <LinearLayout
         android:id="@+id/loading"
         android:layout_width="match_parent"
