--- a/app/src/main/res/layout/item_originality.xml
+++ b/app/src/main/res/layout/item_originality.xml
@@ -4,79 +4,88 @@
               android:layout_height="match_parent"
               android:orientation="vertical"
               android:padding="18dp">
-    <LinearLayout android:layout_width="match_parent"
-                  android:layout_height="wrap_content"
-                  android:gravity="center_vertical"
-                  android:orientation="horizontal">
-        <com.ddgj.dd.view.CircleImageView
-            android:id="@+id/user_icon"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:src="@mipmap/ic_account_box_grey600_24dp"
-            app:border_color="@color/white"
-            app:border_width="2dp"/>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="4dp"
-            android:orientation="vertical">
-            <TextView
-                android:id="@+id/title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ellipsize="end"
-                android:singleLine="true"
-                android:textColor="@color/black"
-                android:textSize="16sp"/>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/user_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/grey"
-                    android:textSize="14sp"/>
-                <ImageView android:layout_width="14dp"
-                           android:layout_height="14dp"
-                           android:layout_marginLeft="4dp"
-                           android:src="@mipmap/ic_launcher"
-                           android:visibility="gone"/>
-
-                <TextView
-                    android:id="@+id/type"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="8dp"
-                    android:background="@drawable/shape_login_edit_text_bg"
-                    android:ellipsize="end"
-                    android:maxLines="1"
-                    android:paddingLeft="4dp"
-                    android:paddingRight="4dp"
-                    android:paddingTop="1dp"
-                    android:textColor="@color/colorPrimary"
-                    android:textSize="10sp"/>
-            </LinearLayout>
-        </LinearLayout>
-    </LinearLayout>
     <LinearLayout
         android:id="@+id/imgs_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
-        <TextView android:id="@+id/content_text" android:layout_width="0dp"
-                  android:layout_height="wrap_content"
-                  android:layout_weight="7"
-                  android:maxLines="4"
-                  android:textColor="@color/grey"/>
+        <LinearLayout android:layout_width="0dp"
+                      android:layout_height="wrap_content"
+                      android:layout_weight="1"
+                      android:orientation="vertical">
+
+
+            <LinearLayout android:layout_width="wrap_content"
+                          android:layout_height="wrap_content"
+                          android:layout_weight="1"
+                          android:gravity="center_vertical"
+                          android:orientation="horizontal">
+                <com.ddgj.dd.view.CircleImageView
+                    android:id="@+id/user_icon"
+                    xmlns:app="http://schemas.android.com/apk/res-auto"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:src="@mipmap/ic_account_box_grey600_24dp"
+                    app:border_color="@color/white"
+                    app:border_width="2dp"/>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="4dp"
+                    android:orientation="vertical">
+                    <TextView
+                        android:id="@+id/title"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:ellipsize="end"
+                        android:singleLine="true"
+                        android:textColor="@color/black"
+                        android:textSize="16sp"/>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/user_name"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textColor="@color/grey"
+                            android:textSize="14sp"/>
+                        <ImageView android:layout_width="14dp"
+                                   android:layout_height="14dp"
+                                   android:layout_marginLeft="4dp"
+                                   android:src="@mipmap/ic_launcher"
+                                   android:visibility="gone"/>
+
+                        <TextView
+                            android:id="@+id/type"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="8dp"
+                            android:background="@drawable/shape_login_edit_text_bg"
+                            android:ellipsize="end"
+                            android:maxLines="1"
+                            android:paddingLeft="4dp"
+                            android:paddingRight="4dp"
+                            android:paddingTop="1dp"
+                            android:textColor="@color/colorPrimary"
+                            android:textSize="10sp"/>
+                    </LinearLayout>
+                </LinearLayout>
+            </LinearLayout>
+            <TextView android:id="@+id/content_text"
+                      android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:maxLines="4"
+                      android:textColor="@color/grey"/>
+        </LinearLayout>
+
         <ImageView
             android:id="@+id/img1"
-            android:layout_width="0dp"
+            android:layout_width="80dp"
             android:layout_height="80dp"
-            android:layout_weight="3"
             android:scaleType="centerCrop"/>
     </LinearLayout>
     <View
