--- a/app/src/main/res/layout/activity_bbs_add.xml
+++ b/app/src/main/res/layout/activity_bbs_add.xml
@@ -12,6 +12,7 @@
 
         <ImageView
             android:id="@+id/backup"
+            android:onClick="backClick"
             style="@style/TitleBarImageTheme"
             android:src="@mipmap/ic_blue_back" />
 
