--- a/app/src/main/res/layout/activity_user_center.xml
+++ b/app/src/main/res/layout/activity_user_center.xml
@@ -16,6 +16,7 @@
             style="@style/TitleBarTextTheme"
             android:text="@string/user_center"/>
         <TextView
+            android:id="@+id/edit"
             style="@style/TitleBarRightTextTheme"
             android:onClick="editClick"
             android:text="@string/edit"/>
