--- a/app/src/main/res/layout/activity_plate_deatils.xml
+++ b/app/src/main/res/layout/activity_plate_deatils.xml
@@ -62,9 +62,11 @@
                 <com.ddgj.dd.view.CircleImageView
                     android:id="@+id/head_pic"
                     android:layout_margin="5dp"
+                    xmlns:app="http://schemas.android.com/apk/res-auto"
+                    app:border_color="@color/white"
+                    app:border_width="1dp"
                     android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:src="@drawable/ic_launcher"/>
+                    android:layout_height="40dp"/>
                 <TextView
                     android:id="@+id/user_amount"
                     android:layout_marginLeft="5dp"
