--- a/app/src/main/res/layout/fragment_plate.xml
+++ b/app/src/main/res/layout/fragment_plate.xml
@@ -7,6 +7,7 @@
     <com.handmark.pulltorefresh.library.PullToRefreshListView
         android:id="@+id/pull_to_refresh_listview"
         android:layout_width="fill_parent"
+        android:background="@color/white"
         android:layout_height="fill_parent" >
         </com.handmark.pulltorefresh.library.PullToRefreshListView>
     <android.support.design.widget.FloatingActionButton
