--- a/app/src/main/res/layout/comment_list_item.xml
+++ b/app/src/main/res/layout/comment_list_item.xml
@@ -3,17 +3,31 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:orientation="horizontal"
+    android:layout_height="wrap_content">
+    <com.ddgj.dd.view.CircleImageView
+        android:id="@+id/head_pic"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        app:border_color="@color/white"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_margin="5dp"
+        />
     <TextView
         android:id="@+id/username"
+        android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="5dp"
         android:text="发布者" />
+</LinearLayout>
+
 
 
     <TextView
-        android:id="@+id/info"
+        android:id="@+id/comment_content"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/sItemIcon"
@@ -24,7 +38,7 @@
         android:singleLine="true"
         android:text="最新自动送飞机"
         android:textColor="@color/all_bg_color"
-        android:textSize="16.0sp"
+        android:textSize="20.0sp"
         android:textStyle="bold" />
 
     <RelativeLayout
@@ -39,29 +53,6 @@
             android:gravity="center"
             android:paddingLeft="5dp"
             android:text="2016-3-6" />
-
-        <TextView
-           android:layout_toLeftOf="@+id/comment_number"
-            android:drawableLeft="@mipmap/browse_number"
-            android:id="@+id/browse_number"
-            android:layout_width="wrap_content"
-            android:layout_height="28sp"
-            android:gravity="center"
-            android:layout_gravity=""
-            android:paddingLeft="10dp"
-            android:text="201" />
-
-        <TextView
-            android:drawableLeft="@mipmap/comment_number"
-            android:id="@+id/comment_number"
-            android:layout_width="wrap_content"
-            android:layout_height="28sp"
-            android:paddingRight="10dp"
-            android:gravity="center"
-            android:layout_alignParentRight="true"
-            android:paddingLeft="10dp"
-            android:text="32" />
-
 
     </RelativeLayout>
 
