--- a/app/src/main/res/layout/activity_plate_deatils.xml
+++ b/app/src/main/res/layout/activity_plate_deatils.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
     <RelativeLayout style="@style/ActionBarLightTheme">
 
         <ImageView
             android:id="@+id/backup"
             style="@style/TitleBarImageTheme"
-            android:src="@mipmap/ic_blue_back" />
+            android:src="@mipmap/ic_blue_back"/>
 
         <TextView
             android:id="@+id/post_title"
@@ -17,10 +17,9 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:text="帖子标题"
             android:textColor="@color/colorPrimary"
             android:textSize="16sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"/>
 
     </RelativeLayout>
 
@@ -50,37 +49,47 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:text="标题"
-                    android:textSize="22sp" />
+                    android:textSize="22sp"/>
 
                 <TextView
                     android:id="@+id/post_publish_data"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="时间" />
+                    android:layout_height="wrap_content"/>
             </LinearLayout>
 
-            <View style="@style/LineGrey1px" />
+            <View style="@style/LineGrey1px"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:gravity="center_vertical"
                 android:orientation="horizontal">
 
                 <com.ddgj.dd.view.CircleImageView
                     android:id="@+id/head_pic"
+                    xmlns:app="http://schemas.android.com/apk/res-auto"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_margin="5dp"
-                    android:src="@drawable/ic_launcher" />
+                    app:border_color="@color/white"
+                    app:border_width="1dp"/>
 
                 <TextView
                     android:id="@+id/user_amount"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:layout_marginLeft="5dp"
-                    android:text="用户名" />
+                    android:layout_weight="1"/>
+                <ImageView
+                    android:id="@+id/chat"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:clickable="true"
+                    android:onClick="sendMessageClick"
+                    android:padding="8dp"
+                    android:src="@mipmap/ic_textsms_grey600_24dp"
+                    android:visibility="gone"/>
             </LinearLayout>
 
             <LinearLayout
@@ -94,17 +103,17 @@
                 <TextView
                     android:id="@+id/post_content_tv"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"/>
             </LinearLayout>
 
-            <View style="@style/LineGrey1px" />
+            <View style="@style/LineGrey1px"/>
         </LinearLayout>
 
     </ScrollView>
     <View
-        android:layout_above="@+id/bottom"
+        style="@style/LineGrey1px"
         android:layout_height="1.5dp"
-        style="@style/LineGrey1px" />
+        android:layout_above="@+id/bottom"/>
     <LinearLayout
         android:id="@+id/bottom"
         android:layout_width="match_parent"
@@ -116,28 +125,28 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
 
-            android:text="" />
+            android:text=""/>
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
 
-            android:text="" />
+            android:text=""/>
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
 
-            android:text="" />
+            android:text=""/>
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
 
-            android:text="" />
+            android:text=""/>
 
         <TextView
             android:id="@+id/tv_comment"
@@ -147,8 +156,8 @@
             android:layout_weight="1"
             android:drawableTop="@mipmap/ic_comment"
             android:gravity="center"
-            android:textSize="10dp"
-            android:text="评论" />
+            android:text="评论"
+            android:textSize="10dp"/>
 
     </LinearLayout>
 </RelativeLayout>
