--- a/app/src/main/res/layout/comment_list_item.xml
+++ b/app/src/main/res/layout/comment_list_item.xml
@@ -1,29 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
-<LinearLayout
-    android:layout_width="wrap_content"
-    android:orientation="horizontal"
-    android:layout_height="wrap_content">
-    <com.ddgj.dd.view.CircleImageView
-        android:id="@+id/head_pic"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        app:border_color="@color/white"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_margin="5dp"
-        />
-    <TextView
-        android:id="@+id/username"
-        android:layout_gravity="center"
-        android:layout_width="wrap_content"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:padding="8dp"
+              android:orientation="vertical">
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="5dp"
-        android:text="发布者" />
-</LinearLayout>
-
+        android:orientation="horizontal">
+        <com.ddgj.dd.view.CircleImageView
+            android:id="@+id/head_pic"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_margin="5dp"
+            app:border_color="@color/white"
+        />
+        <TextView
+            android:id="@+id/username"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:padding="5dp"
+            android:text="发布者"/>
+        <ImageView android:id="@+id/send_message"
+                   android:layout_width="40dp"
+                   android:layout_height="40dp"
+                   android:padding="8dp"
+                   android:src="@mipmap/ic_textsms_grey600_24dp"
+                   android:visibility="visible"/>
+    </LinearLayout>
 
 
     <TextView
@@ -39,7 +46,7 @@
         android:text="最新自动送飞机"
         android:textColor="@color/all_bg_color"
         android:textSize="20.0sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -52,7 +59,7 @@
             android:layout_height="28sp"
             android:gravity="center"
             android:paddingLeft="5dp"
-            android:text="2016-3-6" />
+            android:text="2016-3-6"/>
 
     </RelativeLayout>
 
